// protoc -I pkg/grpc/ pkg/grpc/input.proto --go_out=plugins=grpc:pkg/grpc
syntax = "proto3";

message ReadInputRequest {}

message ReadInputResponse {}

message ListenInputRequest {}

message ListenInputResponse {}

service Input {
    rpc Read (ReadInputRequest) returns (ReadInputResponse) {}
    rpc Listen (ListenInputRequest) returns (stream ListenInputResponse) {}
}
