syntax = "proto3";

package grpc;

import "google/protobuf/timestamp.proto";

message Error {
    uint32 code = 1;
    string message = 2;
}

message TimestampRange {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
}
